--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@types/chrome": "^0.0.171",
     "@types/node": "^16.11.13",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.2.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.6",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
   },
   "eslintConfig": {
     "env": {
-      "webextensions": true
+      "webextensions": true,
+      "node": true
     },
     "parser": "vue-eslint-parser",
     "parserOptions": {
